Fixed bottom cutoff, initial newAlert UI implemented

--- a/www/css/application.css
+++ b/www/css/application.css
@@ -37,6 +37,7 @@ input {
 #content {
     overflow-y:auto;
     height:100%;
+    padding-bottom:60px;
 }
 @-webkit-keyframes rotate {
     from {
